# toro-ai-assistant

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  Makefile  README.md  pyproject.toml
docs/: architecture.md  challenge.md  clean-code-scalability.md  deployment.md  setup-dev.md
events/: api-event.json
infra/: serverless-template.yaml  template.yaml
lib/: __init__.py  db.py  utils.py
lib/adapters/: __init__.py  bedrock_client.py  dynamodb_client.py
lib/core/: __init__.py  constants.py  response_utils.py  validation.py
lib/factories/: __init__.py  aws_clients.py
lib/models/: __init__.py  api.py  aws.py  question.py
lib/utils/: __init__.py  logger_utils.py  sanitize.py
src/questions/ingest/: handler.py  requirements.txt
src/questions/notify/: handler.py
src/questions/process/: handler.py
src/websocket/: handler.py  requirements.txt
tests/: __init__.py  conftest.py
tests/lib/: __init__.py  test_db.py
tests/lib/adapters/: __init__.py  test_bedrock_client.py  test_dynamodb_client.py
tests/questions/: __init__.py
tests/questions/ingest/: __init__.py  test_handler.py
tests/questions/notify/: __init__.py  test_handler.py
tests/questions/process/: __init__.py  test_handler.py
tests/websocket/: __init__.py  test_handler.py
