[tool.poetry]
name = "toro-ai-assistant"
version = "0.1.0"
description = ""
authors = ["Arnaldo Neto <costanetoow@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.38.8"
aws-lambda-powertools = "^3.11.0"
aws-xray-sdk = "^2.14.0"
pydantic = "^2.7.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
moto = "^5.1.4"
ruff = "^0.11.8"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
